searchbar on mobile bug fixed

--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,7 @@ body {
 @media (max-width: 992px) {
   #mobile-navbar-show {
     display: flex;
+    justify-content: flex-end;
   }
 
   #desktop-navbar-show {
